<resources>
    <string name="app_name" translatable="false">GuasApp</string>
    <string name="chats">Chats</string>
    <string name="estado">Status</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="verify">Verify your phone number</string>
    <string name="send">Wasapp will send an SMS mensaje to verify your phone number."</string>
    <string name="type_number">Type your phone number</string>
    <string name="continue_text">Continue</string>
    <string name="dam" translatable="false">GuasApp DAM 2021</string>
    <string name="verify_phone">Verify +34654321321</string>
    <string name="otp">Enter the OTP code to verify your phone number.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="sample_name">Sample Name</string>
    <string name="online">Online</string>
    <string name="type_message">Type a mensaje...</string>
    <string name="profile_info">Profile Info</string>
    <string name="name_picture">Please set your name and an optional profile image.</string>
    <string name="type_name">Type your name</string>
    <string name="setup_profile">Setup Profile</string>
    <string name="add_status">Add to your Status</string>
    <string name="tap_chat">Tap to chat</string>
    <string name="tap_status">Tap to view Status</string>
    <string name="verify_otp">Verifying OTP</string>
    <string name="verify_text">Verify</string>
    <string name="please_enter_otp">Please Enter OTP</string>
    <string name="login_failed">Login Failed</string>
    <string name="uploading">Uploading Image</string>
    <string name="uploading_status">Uploading Status</string>
    <string name="prompt_email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="fields_required">Fields required</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="wait">Wait a moment...</string>
    <string name="logo">Logo</string>
    <string name="password_length">The minimum password lenght is 6</string>
    <string name="no_register">Sorry! No register</string>
    <string name="username">User name</string>
    <string name="full_name">Full name</string>
    <string name="prompt_password">Password</string>
    <string name="register">Register</string>
    <string name="already_account">Has already account?</string>
</resources>