<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:hint="@string/username"
        android:layout_marginTop="15dp"
        android:id="@+id/username"
        android:padding="10dp"/><!--
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:hint="@string/full_name"
        android:layout_marginTop="15dp"
        android:id="@+id/fullname"
        android:padding="10dp"/> -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="15dp"
        android:id="@+id/email"
        android:padding="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:id="@+id/password"
        android:padding="10dp"/>

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_background"
        android:text="@string/register"
        android:textColor="@color/white" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_account"
        android:id="@+id/txt_login"
        android:layout_marginTop="10dp"/>
</LinearLayout>